--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
 
     <application
         android:allowBackup="true"
@@ -12,6 +13,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MAD_practical8_22172012003"
         tools:targetApi="31">
+        <activity
+            android:name=".AlarmBroadcastReceiver"
+            android:exported="false" />
+        <activity
+            android:name=".AlarmService"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
